--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppDelicia01"
-        tools:targetApi="31">
+        android:theme="@style/Theme.AppDelicia01">
 
-        <!-- 1) Pantalla inicial -->
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.AppDelicia01.NoActionBar">   <!-- opcional: sin ActionBar -->
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- 2) Catálogo (debe existir activity_catalog.xml) -->
         <activity android:name=".ui.catalog.CatalogActivity" />
-
-        <!-- 3) Carrito -->
         <activity android:name=".ui.cart.CartActivity" />
-
-        <!-- 4) Login (si lo usarás en el checkout) -->
         <activity android:name=".ui.auth.LoginActivity" />
-
-        <!-- 5) Perfil del usuario -->
         <activity android:name=".ui.profile.ProfileActivity" />
 
     </application>
